WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266823
[WebGPU] WGSL compilation failure opening
https://threejs.org/examples/?q=webgpu#webgpu_backdrop_water
https://bugs.webkit.org/show_bug.cgi?id=266823
Summary
[WebGPU] WGSL compilation failure opening https://threejs.org/examples/?q=web...
Mike Wyrzykowski
Reported
2023-12-22 14:32:05 PST
[WebGPU] WGSL compilation failure opening
https://threejs.org/examples/?q=webgpu#webgpu_backdrop_water
In the attached source: nodeVar7 = ( u32( 3735928559 ) + ( ( nodeVar4 << 2u ) + 13u ) ); results in the following error: 114:19: value 3735928559 cannot be represented as 'i32' as well as: return ( f32( nodeVar0 ) / f32( u32( 4294967295 ) ) ); error: 132:38: value 4294967295 cannot be represented as 'i32'
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-22 14:32:18 PST
<
rdar://problem/120054632
>
Tadeu Zagallo
Comment 2
2023-12-27 08:00:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22252
EWS
Comment 3
2023-12-28 05:07:24 PST
Committed
272520@main
(b1e573cb61f6): <
https://commits.webkit.org/272520@main
> Reviewed commits have been landed. Closing PR #22252 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug