[WebGPU] WGSL compilation failure opening https://threejs.org/examples/?q=webgpu#webgpu_backdrop_water https://bugs.webkit.org/show_bug.cgi?id=266823 rdar://120054632

Reviewed by Mike Wyrzykowski.

The spec was updated to add an overload to u32 that accepts abstract_int as an
argument, and this patch updates our implementation to match the updated spec.
This required specializing the constant u32 constructor to handle the abstract_int
special case, since it differs from the other types in that it needs to check
for that can't fit in a u32. It also required fixing a bug in the overload resolution
where a type variable can be resolved to a type that doesn't satisfy its constraints.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):
* Source/WebGPU/WGSL/Overload.cpp:
(WGSL::OverloadResolver::calculateRank):
* Source/WebGPU/WGSL/TypeDeclarations.rb:
* Source/WebGPU/WGSL/tests/invalid/constants.wgsl:
* Source/WebGPU/WGSL/tests/valid/constants.wgsl:

Canonical link: https://commits.webkit.org/272520@main